# fg_multi

./: CMakeLists.txt  README.md
data/: table2D.txt  table3D.txt
source/: CMakeLists.txt  main.cpp
source/forman/: CMakeLists.txt  formangradient.cpp  formangradient.h  gradientencoding.cpp  gradientencoding.h  morsefeatures.cpp  otherapproaches.cpp  outputcells.cpp  simplexcomparer.cpp  tetragradient.h  trianglegradient.h
source/iastar/: CMakeLists.txt  geometry.cpp  implicit_representation.cpp  io_functions.cpp  simplicialcomplex.cpp  simplicialcomplex.h  topsimplex.cpp  topsimplex.h  vertex.cpp  vertex.h
